syntax = "proto3";
package Stridelabs.stride.stakeibc;

option go_package = "github.com/Stride-Labs/stride/x/stakeibc/types";

message DepositRecord {
  uint64 id = 1;
  int64 amount = 2; 
  string denom = 3; 
  string hostZoneId = 4; 
  string sender = 5; 
  enum Purpose {
    RECEIPT = 0;
    TRANSACTION = 1;
  }
  Purpose purpose = 6; 
  
}