syntax = "proto3";
package stride.records;
option go_package = "github.com/Stride-Labs/stride/x/stride/records/types";

// ---------------------- Transfer Callback ---------------------- //
message TransferCallback {
  uint64 depositRecordId = 1;
}
